--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     function crearHoja() {
         const hoja = document.createElement('img');
-        hoja.src = 'https://w7.pngwing.com/pngs/916/46/png-transparent-skeleton-leaf-golden-leaf-leaf-veins-gold-foil-glitter-maple-leaf-maple-golden-leaf-nature.png';
+        hoja.src = 'https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Gold_leaf_icon.svg/1024px-Gold_leaf_icon.svg.png'; // Hoja bonita
         hoja.classList.add('hoja');
         hoja.style.left = Math.random() * window.innerWidth + 'px';
         hoja.style.top = '-50px';
