--- a/index.html
+++ b/index.html
@@ -1,92 +1,115 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>ÉterFlor</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;700&display=swap');
+    <meta charset="UTF-8">
+    <title>ÉterFlor</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;700&display=swap');
 
-    body {
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background-color: #000000;
-      overflow-x: hidden;
-    }
+        body {
+            margin: 0;
+            font-family: 'Montserrat', sans-serif;
+            background-color: #000000;
+            overflow-x: hidden;
+        }
 
-    header {
-      background: linear-gradient(135deg, #000000, #3d3d3d);
-      padding: 60px 20px;
-      text-align: center;
-      color: #ffd700;
-      position: relative;
-      overflow: hidden;
-    }
+        header {
+            background: linear-gradient(135deg, #000000, #3d3d3d);
+            padding: 60px 20px;
+            text-align: center;
+            color: #ffd700;
+            position: relative;
+            overflow: hidden;
+        }
 
-    header h1 {
-      font-family: 'Great Vibes', cursive;
-      font-size: 4em;
-      color: #ffd700;
-      margin: 0;
-      position: relative;
-      z-index: 1;
-    }
+        header h1 {
+            font-family: 'Great Vibes', cursive;
+            font-size: 4em;
+            color: #ffd700;
+            margin: 0;
+            position: relative;
+            z-index: 1;
+        }
 
-    .hoja {
-      position: absolute;
-      width: 30px;
-      opacity: 0.2;
-      animation: caer 5s linear forwards;
-      pointer-events: none;
-    }
+        .hoja {
+            position: absolute;
+            width: 40px;
+            opacity: 0.2;
+            animation: caer 5s linear forwards;
+            pointer-events: none;
+        }
 
-    @keyframes caer {
-      0% {
-        transform: translateY(-50px) rotate(0deg);
-        opacity: 0.2;
-      }
-      100% {
-        transform: translateY(300px) rotate(360deg);
-        opacity: 0;
-      }
-    }
-  </style>
+        @keyframes caer {
+            0% {
+                transform: translateY(-50px) rotate(0deg);
+                opacity: 0.2;
+            }
+            100% {
+                transform: translateY(300px) rotate(360deg);
+                opacity: 0;
+            }
+        }
+    </style>
 </head>
 <body>
 
 <header>
-  <h1>ÉterFlor</h1>
+    <h1>ÉterFlor</h1>
 </header>
 
-<svg id="svg-hoja" width="0" height="0" xmlns="http://www.w3.org/2000/svg">
-  <symbol id="hoja-dorada" viewBox="0 0 64 64">
-    <path fill="#FFD700" d="M32 2C18 10 2 24 12 42s32 20 40 12c8-8 6-24-4-36S38 6 32 2z"/>
-  </symbol>
-</svg>
+<section class="flores-eternas">
+    <h2>Flores Eternas</h2>
+    <div class="contenedor-flores">
+        
+        <div class="flor">
+            <img src="https://cdn.pixabay.com/photo/2016/11/29/09/15/rose-1867364_1280.jpg" alt="Rosa Dorada">
+            <h3>Rosa Dorada</h3>
+            <p>Una rosa bañada en oro, símbolo de amor eterno.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Dorada%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        </div>
+
+        <div class="flor">
+            <img src="https://cdn.pixabay.com/photo/2017/08/30/07/52/rose-2699715_1280.jpg" alt="Rosa Azul">
+            <h3>Rosa Azul</h3>
+            <p>Representa lo imposible, la magia y el misterio del amor.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Azul%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        </div>
+
+        <div class="flor">
+            <img src="https://cdn.pixabay.com/photo/2021/02/20/12/24/rose-6031824_1280.jpg" alt="Rosa Cristal">
+            <h3>Rosa Cristal</h3>
+            <p>Una joya transparente, pura como tus sentimientos.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Cristal%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        </div>
+
+        <div class="flor">
+            <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/rose-1867343_1280.jpg" alt="Rosa Negra">
+            <h3>Rosa Negra</h3>
+            <p>Fuerza, elegancia y pasión profunda.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Negra%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        </div>
+
+        <div class="flor">
+            <img src="https://cdn.pixabay.com/photo/2018/07/29/20/59/rose-3571691_1280.jpg" alt="Rosa Roja">
+            <h3>Rosa Roja</h3>
+            <p>El clásico eterno, amor y pasión que perduran.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Roja%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        </div>
+
+        <div class="flor">
+            <img src="https://cdn.pixabay.com/photo/2017/06/04/15/33/flower-2370196_1280.jpg" alt="Rosa Multicolor">
+            <h3>Rosa Multicolor</h3>
+            <p>Diversidad, alegría y sorpresa en una sola flor.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Multicolor%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        </div>
+
+    </div>
+</section>
+
+<!-- Aquí puedes pegar la segunda sección o cualquier otra que quieras agregar más tarde -->
 
 <script>
-  const header = document.querySelector('header');
-
-  function crearHoja() {
-    const hoja = document.createElementNS("http://www.w3.org/2000/svg", "svg");
-    const use = document.createElementNS("http://www.w3.org/2000/svg", "use");
-    hoja.classList.add('hoja');
-    hoja.style.left = Math.random() * window.innerWidth + 'px';
-    hoja.style.top = '-50px';
-    hoja.setAttribute("width", "40");
-    hoja.setAttribute("height", "40");
-    hoja.setAttribute("viewBox", "0 0 64 64");
-    hoja.setAttribute("xmlns", "http://www.w3.org/2000/svg");
-
-    use.setAttributeNS('http://www.w3.org/1999/xlink', 'href', '#hoja-dorada');
-    hoja.appendChild(use);
-    header.appendChild(hoja);
-
-    setTimeout(() => {
-      hoja.remove();
-    }, 5000);
-  }
-
-  setInterval(crearHoja, 600);
+    // Aquí puedes agregar algún script extra si lo deseas
 </script>
 
 </body>
