--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         body {
             margin: 0;
             font-family: 'Montserrat', sans-serif;
-            background-color: #000000;
+            background-color: #f1f1f1; /* Color pastel claro para el fondo */
             overflow-x: hidden;
         }
 
         header {
-            background: linear-gradient(135deg, #000000, #3d3d3d);
+            background: linear-gradient(135deg, #6c7d7f, #2f3d3b); /* Colores pasteles oscuros */
             padding: 60px 20px;
             text-align: center;
-            color: #ffd700;
+            color: #fff;
             position: relative;
             overflow: hidden;
         }
@@ -31,24 +31,75 @@
             z-index: 1;
         }
 
-        .hoja {
-            position: absolute;
-            width: 40px;
-            opacity: 0.2;
-            animation: caer 5s linear forwards;
-            pointer-events: none;
+        .contenedor-flores {
+            display: flex;
+            overflow-x: auto;
+            gap: 20px;
+            padding: 20px;
+            scroll-behavior: smooth;
         }
 
-        @keyframes caer {
-            0% {
-                transform: translateY(-50px) rotate(0deg);
-                opacity: 0.2;
-            }
-            100% {
-                transform: translateY(300px) rotate(360deg);
-                opacity: 0;
-            }
+        .flor {
+            background-color: #c5b8b0; /* Color pastel oscuro */
+            border-radius: 10px;
+            padding: 20px;
+            width: 300px;
+            text-align: center;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out;
+            overflow: hidden;
+            flex-shrink: 0;
+            position: relative;
         }
+
+        .flor img {
+            max-width: 100%;
+            border-radius: 10px;
+        }
+
+        .flor h3 {
+            margin: 10px 0;
+            color: #3d3d3d;
+        }
+
+        .flor p {
+            color: #444;
+        }
+
+        .flor a {
+            background-color: #ffd700;
+            color: #3d3d3d;
+            padding: 10px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            display: inline-block;
+            margin-top: 10px;
+            transition: background-color 0.3s ease;
+        }
+
+        .flor a:hover {
+            background-color: #ffcc00;
+        }
+
+        .flor:hover {
+            transform: scale(1.05);
+        }
+
+        /* Estilos para el carrusel (deslizar) */
+        .contenedor-flores::-webkit-scrollbar {
+            height: 8px;
+        }
+
+        .contenedor-flores::-webkit-scrollbar-thumb {
+            background-color: #888;
+            border-radius: 5px;
+        }
+
+        .contenedor-flores::-webkit-scrollbar-thumb:hover {
+            background-color: #555;
+        }
+
     </style>
 </head>
 <body>
@@ -105,8 +156,6 @@
 
     </div>
 </section>
-
-<!-- Aquí puedes pegar la segunda sección o cualquier otra que quieras agregar más tarde -->
 
 <script>
     // Aquí puedes agregar algún script extra si lo deseas
