--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         body {
             margin: 0;
             font-family: 'Montserrat', sans-serif;
-            background-color: #f1f1f1; /* Color pastel claro para el fondo */
+            background-color: #f1f1f1;
             overflow-x: hidden;
             position: relative;
         }
 
         header {
-            background: linear-gradient(135deg, #6c7d7f, #2f3d3b); /* Colores pasteles oscuros */
+            background: linear-gradient(135deg, #6c7d7f, #2f3d3b);
             padding: 60px 20px;
             text-align: center;
             color: #fff;
@@ -32,7 +32,6 @@
             z-index: 1;
         }
 
-        /* Efecto de las hojas cayendo */
         .hoja {
             position: absolute;
             width: 40px;
@@ -52,7 +51,6 @@
             }
         }
 
-        /* Colocamos varias hojas aleatorias en la página */
         .hoja:nth-child(1) { left: 10%; animation-duration: 5s; }
         .hoja:nth-child(2) { left: 20%; animation-duration: 6s; }
         .hoja:nth-child(3) { left: 30%; animation-duration: 7s; }
@@ -68,7 +66,7 @@
         }
 
         .flor {
-            background-color: #c5b8b0; /* Color pastel oscuro */
+            background-color: #c5b8b0;
             border-radius: 10px;
             padding: 20px;
             width: 300px;
@@ -78,7 +76,6 @@
             overflow: hidden;
             flex-shrink: 0;
             position: relative;
-            cursor: pointer;
         }
 
         .flor img {
@@ -115,7 +112,6 @@
             transform: scale(1.05);
         }
 
-        /* Estilos para el carrusel (deslizar) */
         .contenedor-flores::-webkit-scrollbar {
             height: 8px;
         }
@@ -129,51 +125,12 @@
             background-color: #555;
         }
 
-        /* Estilos para el modal */
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.4);
-            padding-top: 60px;
-        }
-
-        .modal-content {
-            background-color: #fefefe;
-            margin: 5% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-        }
-
-        .close {
-            color: #aaa;
-            font-size: 28px;
-            font-weight: bold;
-            position: absolute;
-            right: 20px;
-            top: 10px;
-        }
-
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
     </style>
 </head>
 <body>
 
 <header>
     <h1>ÉterFlor</h1>
-
-    <!-- Hojas que caen -->
     <div class="hoja" style="animation-delay: 0s;"></div>
     <div class="hoja" style="animation-delay: 2s;"></div>
     <div class="hoja" style="animation-delay: 4s;"></div>
@@ -189,56 +146,52 @@
             <img src="https://cdn.pixabay.com/photo/2016/11/29/09/15/rose-1867364_1280.jpg" alt="Rosa Dorada">
             <h3>Rosa Dorada</h3>
             <p>Una rosa bañada en oro, símbolo de amor eterno.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Dorada%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
         <div class="flor" onclick="mostrarHistoria('rosaAzul')">
             <img src="https://cdn.pixabay.com/photo/2017/08/30/07/52/rose-2699715_1280.jpg" alt="Rosa Azul">
             <h3>Rosa Azul</h3>
             <p>Representa lo imposible, la magia y el misterio del amor.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Azul%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
         <div class="flor" onclick="mostrarHistoria('rosaCristal')">
             <img src="https://cdn.pixabay.com/photo/2021/02/20/12/24/rose-6031824_1280.jpg" alt="Rosa Cristal">
             <h3>Rosa Cristal</h3>
             <p>Una joya transparente, pura como tus sentimientos.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Cristal%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
         <div class="flor" onclick="mostrarHistoria('rosaNegra')">
             <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/rose-1867343_1280.jpg" alt="Rosa Negra">
             <h3>Rosa Negra</h3>
             <p>Fuerza, elegancia y pasión profunda.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Negra%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
         <div class="flor" onclick="mostrarHistoria('rosaRoja')">
             <img src="https://cdn.pixabay.com/photo/2018/07/29/20/59/rose-3571691_1280.jpg" alt="Rosa Roja">
             <h3>Rosa Roja</h3>
             <p>El clásico eterno, amor y pasión que perduran.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Roja%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
         <div class="flor" onclick="mostrarHistoria('rosaMulticolor')">
             <img src="https://cdn.pixabay.com/photo/2017/06/04/15/33/flower-2370196_1280.jpg" alt="Rosa Multicolor">
             <h3>Rosa Multicolor</h3>
             <p>Diversidad, alegría y sorpresa en una sola flor.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Multicolor%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
     </div>
 </section>
-
-<!-- Modal para mostrar la historia -->
-<div id="myModal" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="cerrarModal()">&times;</span>
-        <h2 id="florTitulo"></h2>
-        <p id="florHistoria"></p>
-    </div>
-</div>
 
 <script>
     function mostrarHistoria(flor) {
         let titulo = '';
         let historia = '';
 
-        // Historia de las flores
         if (flor === 'rosaDorada') {
             titulo = 'Rosa Dorada';
             historia = 'La Rosa Dorada es conocida por su belleza única. Se dice que es un símbolo de amor eterno, un regalo perfecto para aquellos que desean expresar su afecto incondicional.';
@@ -259,7 +212,6 @@
             historia = 'La Rosa Multicolor es un símbolo de alegría y diversidad. Representa la celebración del amor en todas sus formas, combinando diferentes emociones en una sola flor.';
         }
 
-        // Mostrar el modal con la historia de la flor seleccionada
         document.getElementById('florTitulo').innerText = titulo;
         document.getElementById('florHistoria').innerText = historia;
         document.getElementById('myModal').style.display = 'block';
@@ -272,3 +224,4 @@
 
 </body>
 </html>
+
