--- a/index.html
+++ b/index.html
@@ -142,86 +142,50 @@
     <h2>Flores Eternas</h2>
     <div class="contenedor-flores">
         
-        <div class="flor" onclick="mostrarHistoria('rosaDorada')">
+        <div class="flor">
             <img src="https://cdn.pixabay.com/photo/2016/11/29/09/15/rose-1867364_1280.jpg" alt="Rosa Dorada">
             <h3>Rosa Dorada</h3>
             <p>Una rosa bañada en oro, símbolo de amor eterno.</p>
             <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Dorada%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
-        <div class="flor" onclick="mostrarHistoria('rosaAzul')">
+        <div class="flor">
             <img src="https://cdn.pixabay.com/photo/2017/08/30/07/52/rose-2699715_1280.jpg" alt="Rosa Azul">
             <h3>Rosa Azul</h3>
             <p>Representa lo imposible, la magia y el misterio del amor.</p>
             <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Azul%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
-        <div class="flor" onclick="mostrarHistoria('rosaCristal')">
+        <div class="flor">
             <img src="https://cdn.pixabay.com/photo/2021/02/20/12/24/rose-6031824_1280.jpg" alt="Rosa Cristal">
             <h3>Rosa Cristal</h3>
             <p>Una joya transparente, pura como tus sentimientos.</p>
             <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Cristal%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
-        <div class="flor" onclick="mostrarHistoria('rosaNegra')">
+        <div class="flor">
             <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/rose-1867343_1280.jpg" alt="Rosa Negra">
             <h3>Rosa Negra</h3>
             <p>Fuerza, elegancia y pasión profunda.</p>
             <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Negra%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
-        <div class="flor" onclick="mostrarHistoria('rosaRoja')">
+        <div class="flor">
             <img src="https://cdn.pixabay.com/photo/2018/07/29/20/59/rose-3571691_1280.jpg" alt="Rosa Roja">
             <h3>Rosa Roja</h3>
             <p>El clásico eterno, amor y pasión que perduran.</p>
             <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Roja%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
-        <div class="flor" onclick="mostrarHistoria('rosaMulticolor')">
-            <img src="https://cdn.pixabay.com/photo/2017/06/04/15/33/flower-2370196_1280.jpg" alt="Rosa Multicolor">
-            <h3>Rosa Multicolor</h3>
-            <p>Diversidad, alegría y sorpresa en una sola flor.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Multicolor%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        <div class="flor">
+            <img src="https://cdn.pixabay.com/photo/2017/06/04/15/33/flower-2370196_1280.jpg" alt="ÉterFlor">
+            <h3>ÉterFlor</h3>
+            <p>Una flor nacida del éter, inmortal y pura, que refleja la belleza de un amor más allá de la vida misma. Su esencia florece en el alma y su fragancia trasciende el tiempo, creando un vínculo eterno entre los seres que la contemplan.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20ÉterFlor%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
     </div>
 </section>
 
-<script>
-    function mostrarHistoria(flor) {
-        let titulo = '';
-        let historia = '';
-
-        if (flor === 'rosaDorada') {
-            titulo = 'Rosa Dorada';
-            historia = 'La Rosa Dorada es conocida por su belleza única. Se dice que es un símbolo de amor eterno, un regalo perfecto para aquellos que desean expresar su afecto incondicional.';
-        } else if (flor === 'rosaAzul') {
-            titulo = 'Rosa Azul';
-            historia = 'La Rosa Azul es un símbolo de lo imposible y lo misterioso. Se cree que representa los secretos del amor verdadero, aquello que no puede ser alcanzado por todos.';
-        } else if (flor === 'rosaCristal') {
-            titulo = 'Rosa Cristal';
-            historia = 'La Rosa Cristal es una flor pura y transparente, un símbolo de transparencia y honestidad en las relaciones. Es perfecta para quienes valoran la sinceridad en el amor.';
-        } else if (flor === 'rosaNegra') {
-            titulo = 'Rosa Negra';
-            historia = 'La Rosa Negra es una flor poderosa que representa la fuerza y la pasión. Es ideal para aquellos que buscan un amor intenso y profundo.';
-        } else if (flor === 'rosaRoja') {
-            titulo = 'Rosa Roja';
-            historia = 'La Rosa Roja es el símbolo clásico del amor y la pasión. Es la flor perfecta para quienes desean expresar su amor eterno y sin reservas.';
-        } else if (flor === 'rosaMulticolor') {
-            titulo = 'Rosa Multicolor';
-            historia = 'La Rosa Multicolor es un símbolo de alegría y diversidad. Representa la celebración del amor en todas sus formas, combinando diferentes emociones en una sola flor.';
-        }
-
-        document.getElementById('florTitulo').innerText = titulo;
-        document.getElementById('florHistoria').innerText = historia;
-        document.getElementById('myModal').style.display = 'block';
-    }
-
-    function cerrarModal() {
-        document.getElementById('myModal').style.display = 'none';
-    }
-</script>
-
 </body>
 </html>
-
